--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <ol>
       <li><a href = "mailto: kieran.calavan@gmail.com">Email</a> </li>
       <li> <a href="https://github.com/kieran-calavan/">GitHub</a> </li>
-      <li> <a href= "https://linkedin.com/in/kieran-calavan//">LinkedIn</a>  </li>
+      <li> <a href= "https://linkedin.com/in/kieran-calavan/">LinkedIn</a>  </li>
     </ol>
     </div>
 </section>
