--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <link href="style.css" rel="stylesheet" type="text/css" />
 
-  <link rel= "shortcut icon" type="image/png" href="images/favicon.png">
+  <!-- <link rel= "shortcut icon" type="image/png" href="images/favicon.png"> -->
 </head>
 
     <!-- header -->
@@ -53,8 +53,8 @@
   <p> My interests beyond coding include: </p>
     <div class= "list">
       <ul>
-        <li> Health and human performance </li>
         <li> Family, friends and good food </li>
+        <li> Health and human performance </li>
         <li> Backpacking, rock climbing and tennis </li>
 
       </ul>
