--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <link href="style.css" rel="stylesheet" type="text/css" />
 
-  <!--<link rel= "shortcut icon" type="image/png" href="images/favicon.png"> -->
+  <link rel= "shortcut icon" type="image/png" href="images/favicon.png"> 
 </head>
 
     <!-- header -->
