--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   href="https://fonts.googleapis.com/css?family=Roboto">
     <meta charset="utf-8">
     <meta name="viewport" content="width=500">
-    <title>Kieran</title>
+    <title>Kieran Calavan</title>
 
     <!-- Adding normalize.css -->
 
@@ -17,12 +17,12 @@
     />
     <link href="style.css" rel="stylesheet" type="text/css" />
 
-  <link rel= "shortcut icon" type="image/png" href="images/favicon.png"> 
+  <link rel= "shortcut icon" type="image/png" href="images/favicon.png">
 </head>
 
     <!-- header -->
 <header>
-  <h1> Kieran Calavan</h1>
+  <h1> Kieran Calavan </h1>
     <h2> Web Developer </h2>
 </header>
 
