--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     rel="stylesheet"
     type="text/css"
     />
+
+
+
     <link href="style.css" rel="stylesheet" type="text/css" />
 
   <link rel= "shortcut icon" type="image/png" href="images/favicon.png">
@@ -47,7 +50,7 @@
 
   <p> After graduating with a degree in Psychology, I worked in operations roles in the restaurant, insurance and environmental consulting industries. </p>
 
-  <p> I take an operational approach to coding, working with a team to solve complex problems that empower others to do their best work. </p>
+  <p> I take an operational approach to coding, working with a team to solve complex problems, empowering others to do their best work. </p>
 
   <article>
   <p> My interests beyond coding include: </p>
