--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
   <p> You can contact me: </p>
     <div class= "list">
     <ol>
-      <img src="images/email.png" class="round-image" width="50" alt="black and white email icon"><a href = "mailto: kieran.calavan@gmail.com">Email</a> </li>
-      <img src="images/github.png" class="round-image" width="50" alt="black and white github icon"><a href="https://github.com/kieran-calavan/">GitHub</a> </li>
-      <img src="images/linkedin.png" class="round-image" width="50" alt="black and white linkedin icon"><a href= "https://linkedin.com/in/kieran-calavan/">LinkedIn</a>  </li>
+      <img src="images/email.png" class="round-image" width="50" alt="black and white email icon"><a href = "mailto: kieran.calavan@gmail.com"></a> </li>
+      <img src="images/github.png" class="round-image" width="80" alt="black and white github icon"><a href="https://github.com/kieran-calavan/"></a> </li>
+      <img src="images/linkedin.png" class="round-image" width="50" alt="black and white linkedin icon"><a href= "https://linkedin.com/in/kieran-calavan/"></a>  </li>
     </div>
 </section>
   </main>
