--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
   <p> You can contact me: </p>
     <div class= "list">
     <ol>
-      <img src="images/email.png" class="round-image" width="50" alt="black and white email icon" href = "mailto: kieran.calavan@gmail.com">
-      <img src="images/github.png" class="round-image" width="100" alt="black and white github icon" href="https://github.com/kieran-calavan/">
-      <img src="images/linkedin.png" class="round-image" width="40" alt="black and white linkedin icon" href= "https://linkedin.com/in/kieran-calavan/">
+      <a href = "mailto: kieran.calavan@gmail.com"> <img src="images/email.png" class="round-image" width="50" alt="black and white email icon">
+      <img src="images/github.svg" class="round-image" width="43" alt="black and white github icon" a href="https://github.com/kieran-calavan/">
+      <img src="images/linkedin.png" class="round-image" width="50" alt="black and white linkedin icon" a href= "https://linkedin.com/in/kieran-calavan/">
     </div>
 </section>
   </main>
