--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <div class= "list">
     <ol>
       <a href = "mailto: kieran.calavan@gmail.com"> <img src="images/email.png" class="round-image" width="50" alt="black and white email icon">
-      <img src="images/github.svg" class="round-image" width="43" alt="black and white github icon" a href="https://github.com/kieran-calavan/">
-      <img src="images/linkedin.png" class="round-image" width="50" alt="black and white linkedin icon" a href= "https://linkedin.com/in/kieran-calavan/">
+      <a href= "https://github.com/kieran-calavan/"> <img src="images/github.svg" class="round-image" width="43" alt="black and white github icon">
+      <a href= "https://linkedin.com/in/kieran-calavan/"> <img src="images/linkedin.png" class="round-image" width="50" alt="black and white linkedin icon">
     </div>
 </section>
   </main>
