--- a/index.html
+++ b/index.html
@@ -1047,6 +1047,9 @@
           d="M12.1,13.8v19.1H5.7V13.8C5.7,13.8,12.1,13.8,12.1,13.8z M12.5,7.9c0,0.9-0.3,1.7-1,2.4c-0.7,0.6-1.5,0.9-2.6,0.9h0 c-1.1,0-1.9-0.3-2.5-0.9c-0.6-0.6-1-1.4-1-2.4c0-1,0.3-1.7,1-2.4S7.9,4.6,9,4.6s1.9,0.3,2.6,0.9S12.5,6.9,12.5,7.9z M35,22v11h-6.4 V22.7c0-1.4-0.3-2.4-0.8-3.2c-0.5-0.8-1.3-1.1-2.4-1.1c-0.8,0-1.5,0.2-2,0.7c-0.5,0.4-1,1-1.2,1.7c-0.1,0.4-0.2,0.9-0.2,1.6v10.7 h-6.4c0-5.1,0-9.3,0-12.5s0-5.1,0-5.7l0-0.9H22v2.8h0c0.3-0.4,0.5-0.8,0.8-1.1c0.3-0.3,0.6-0.6,1.1-1c0.5-0.4,1-0.6,1.7-0.8 c0.7-0.2,1.4-0.3,2.2-0.3c2.2,0,4,0.7,5.3,2.2C34.4,17,35,19.1,35,22L35,22z"
         ></path>
       </symbol>
+      <symbol id="icon-b47" viewBox="0 0 40 40"><path d="M39.7,20.4c-2.5,3.7-4.9,7.5-7.4,11.2c-0.1,0.2-0.3,0.4-0.5,0.6c-0.5,0.5-1.2,0.8-1.8,0.9 c-0.7,0.2-1.3,0.1-2,0.1c-0.1,0-0.2,0-0.3,0c-7.4,0-14.9,0-22.3,0c-0.1,0-0.2,0-0.2,0c-0.1,0-0.3,0-0.4-0.1 c-0.8-0.2-1.1-0.8-0.6-1.5c2.5-3.8,5-7.6,7.5-11.4c0.4-0.7,1-1.3,1.9-1.4c0.5-0.1,1.1-0.2,1.6-0.2c5.6,0,11.1,0,16.7,0 c1.3,0,2.7,0,4,0c1,0,2,0,2.9,0c0.7,0,1.1,0.3,1.3,0.9c0,0,0,0.1,0,0.1C39.9,19.9,39.8,20.2,39.7,20.4z M31.2,16.9 c-0.1,0-0.2,0-0.3,0c-5.6,0-11.1,0-16.7,0c-0.4,0-0.9,0.1-1.3,0.2c-0.9,0.3-1.8,0.7-2.3,1.6c-2.1,3.2-4.2,6.4-6.3,9.5 c-0.4,0.6-0.8,1.2-1.2,1.9c0-0.1,0-0.2,0-0.3c0-3,0-5.9,0-8.9C3,17,3,13,3,9.1C3,8,3.6,7.2,4.6,6.8c0.1,0,0.3-0.1,0.4-0.1 c3.3,0,6.6,0,9.9,0c0,0,0,0,0.1,0c1.3,0.3,1.9,1.1,1.9,2.4c0,0.8,0,1.5,0,2.3c0,0.1,0,0.2,0,0.2c0.1,0,0.2,0,0.3,0 c3.8,0,7.7,0,11.5,0c1.4,0,2.4,1,2.4,2.4c0,0.9,0,1.7,0,2.6C31.2,16.8,31.2,16.8,31.2,16.9z">
+        </path>
+      </symbol>
     </svg>
     <div id="wrapper">
       <div id="main">
@@ -1112,7 +1115,7 @@
                     </li>
                     <li style="opacity: 1; transform: none">
                       <a class="n05" href="https://github.com/kieran-calavan?tab=repositories"
-                        ><svg><use xlink:href="#icon-951"></use></svg
+                        ><svg><use xlink:href="#icon-b47"></use></svg
                         ><span class="label">Portfolio</span></a
                       >
                     </li>
