--- a/index.html
+++ b/index.html
@@ -1011,6 +1011,7 @@
       </style>
     </noscript>
     <style></style>
+    <link rel= "shortcut icon" type="image/png" href="images/favicon.png">
   </head>
   <body class="is-ready">
     <svg
