--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
                     <li style="opacity: 1; transform: none">
                       <a
                         class="n04"
-                        href="https://drive.google.com/file/d/19UOn57vh9_K0CdEdeNjX78KYp5V87RWk/view?usp=sharing"
+                        href="https://drive.google.com/file/d/19UOn57vh9_K0CdEdeNjX78KYp5V87RWk/view"
                         ><svg><use xlink:href="#icon-a4d"></use></svg
                         ><span class="label">CV</span></a
                       >
