--- a/index.html
+++ b/index.html
@@ -1140,32 +1140,36 @@
               </div>
             </div>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-                      <div class="container">
-                        <div class="row-6">
-                          <div class="row row-cols-6 row-cols-md-2 g-2">
-                            <div class="col">
-                              <div class="card">
-                                <img src="images/grubdash.png" class="card-img-top" alt="screenshot of the grubdash project dashboard">
-                                <div class="card-body">
-                                  <h5 class="card-title">Grubdash Project</h5>
-                                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col-row">
-                              <div class="card">
-                                <img src="..." class="card-img-top" alt="...">
-                                <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
-                                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                </div>
-                              </div>
-                            </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+            <div class="container" style="align-content:space-around;">
+            <div class="row">
+              <div class="col-5">
+              <div class="card h-100">
+                <!-- style="width: 70rem;rem;height: 70rem;" -->
+                  <img class="card-img-top" src="images/grubdash-project.png" alt="screenshot of the grubdash project dashboard">
+                  <div class="card-body">
+                      <h5 class="card-title">Grubdash Project</h5>
+                      <p class="card-text">This is the backend for the Grubdash project for thinkful. It sets up routes and API calls to access and update dishes and orders in additon to creating and deleting orders for a fictional food delievery app. 
+                        The app uses middleware to validate the requests made have sufficient data properties for the request to be successful. The app uses express and node.js.</p>
+                        <a href="#" class="btn btn-primary">Project Demo</a>
+                      <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+                  </div>
+              </div>
+              </div>
+                <div class="col-5">
+                <div class="card h-100" >
+                <!-- style="width: 70rem;rem;height: 70rem;" -->
+                  <img class="card-img-top" src="images/flashcard-project.png" alt="screenshot of the flashcard project dashboard">
+                  <div class="card-body">
+                      <h5 class="card-title">Flashcard Project</h5>
+                      <p class="card-text">Flashcard-o-matic is an application for creating, editing, and deleting digital flashcards and decks of flashcards. Each flashcard has a front and back; the front shows the question, the back shows the answer, and there is a button to flip the card. 
+                        You can save a series of cards as a deck. This is useful to keep the cards organized by relevance. Cards and decks can be added, modified, and/or deleted.</p>
+                        <a href="#" class="btn btn-primary">Project Demo</a>
+                      <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+                  </div>
+                  </div>
+                </div>
+              </div>          
+            </div>
           </div>
         </div>
       </div>
