--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
                       <h5 class="card-title">Grubdash Project</h5>
                       <p class="card-text">This is the backend for the Grubdash project for thinkful. It sets up routes and API calls to access and update dishes and orders in additon to creating and deleting orders for a fictional food delievery app. 
                         The app uses middleware to validate the requests made have sufficient data properties for the request to be successful. The app uses express and node.js.</p>
-                        <a href="#" class="btn btn-primary">Project Demo</a>
+                        <a href="https://grubdash-front-end.vercel.app/" class="btn btn-primary">Project Demo</a>
                       <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                   </div>
               </div>
