--- a/index.html
+++ b/index.html
@@ -1141,9 +1141,9 @@
             </div>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
             <div class="container" style="align-content:space-around;">
-            <div class="row">
+            <div class="d-flex mt-5 justify-content-center">
               <div class="col-5">
-              <div class="card h-100">
+              <div class="card card-custom mx-2 mb-3" style="height:44rem">
                 <!-- style="width: 70rem;rem;height: 70rem;" -->
                   <img class="card-img-top" src="images/grubdash-project.png" alt="screenshot of the grubdash project dashboard">
                   <div class="card-body">
@@ -1156,7 +1156,7 @@
               </div>
               </div>
                 <div class="col-5">
-                <div class="card h-100" >
+                <div class="card card-custom mx-2 mb-3" style="height:44rem" >
                 <!-- style="width: 70rem;rem;height: 70rem;" -->
                   <img class="card-img-top" src="images/flashcard-project.png" alt="screenshot of the flashcard project dashboard">
                   <div class="card-body">
