--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
             <div class="container" style="align-content:space-around;">
             <div class="d-flex mt-5 justify-content-center">
               <div class="col-5">
-              <div class="card card-custom mx-2 mb-3" style="height:44rem">
+              <div class="card card-custom xs-3 mx-2 mb-3" style="height:44rem">
                 <!-- style="width: 70rem;rem;height: 70rem;" -->
                   <img class="card-img-top" src="images/grubdash-project.png" alt="screenshot of the grubdash project dashboard">
                   <div class="card-body">
@@ -1157,7 +1157,7 @@
               </div>
               </div>
                 <div class="col-5">
-                <div class="card card-custom mx-2 mb-3" style="height:44rem" >
+                <div class="card card-custom xs-3 mx-2 mb-3" style="height:44rem" >
                 <!-- style="width: 70rem;rem;height: 70rem;" -->
                   <img class="card-img-top" src="images/flashcard-project.png" alt="screenshot of the flashcard project dashboard">
                   <div class="card-body">
