--- a/index.html
+++ b/index.html
@@ -1141,10 +1141,10 @@
             </div>
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
             <div class="container" style="align-content:space-around;">
-            <div class="d-flex mt-5 justify-content-center">
-              <div class="col-5">
-              <div class="card card-custom xs-3 mx-2 mb-3" style="height:44rem">
-                <!-- style="width: 70rem;rem;height: 70rem;" -->
+            <div class="d-flex">
+              <div class="row-xs-3">
+              <div class="card card-custom me-4">
+                <!-- style="width: 70rem;rem;height: 70rem;" col-xs-4 col-sm-6 -->
                   <img class="card-img-top" src="images/grubdash-project.png" alt="screenshot of the grubdash project dashboard">
                   <div class="card-body">
                       <h5 class="card-title">Grubdash Project</h5>
@@ -1156,9 +1156,11 @@
                   </div>
               </div>
               </div>
-                <div class="col-5">
-                <div class="card card-custom xs-3 mx-2 mb-3" style="height:44rem" >
-                <!-- style="width: 70rem;rem;height: 70rem;" -->
+              <br>
+              <br>
+                <div class="row-xs-3">
+                <div class="card card-custom" >
+                <!-- style="width: 70rem;rem;height: 70rem;"col-xs-4 col-sm-6 -->
                   <img class="card-img-top" src="images/flashcard-project.png" alt="screenshot of the flashcard project dashboard">
                   <div class="card-body">
                       <h5 class="card-title">Flashcard Project</h5>
@@ -1166,7 +1168,7 @@
                         You can save a series of cards as a deck. This is useful to keep the cards organized by relevance. Cards and decks can be added, modified, and/or deleted.</p>
                         <a href="https://github.com/kieran-calavan/flashcard-project" class="btn btn-primary">Flashcard Repository</a>
                       <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
-                  </div>
+                    </div>
                   </div>
                 </div>
               </div>          
