--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
             <div class="container" style="align-content:space-around;">
             <div class="d-flex">
-              <div class="row-xs-3">
+              <div class="col-sm-6">
               <div class="card card-custom me-4">
                 <!-- style="width: 70rem;rem;height: 70rem;" col-xs-4 col-sm-6 -->
                   <img class="card-img-top" src="images/grubdash-project.png" alt="screenshot of the grubdash project dashboard">
@@ -1158,7 +1158,7 @@
               </div>
               <br>
               <br>
-                <div class="row-xs-3">
+                <div class="col-sm-6">
                 <div class="card card-custom" >
                 <!-- style="width: 70rem;rem;height: 70rem;"col-xs-4 col-sm-6 -->
                   <img class="card-img-top" src="images/flashcard-project.png" alt="screenshot of the flashcard project dashboard">
