--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
                       <p class="card-text">This is the backend for the Grubdash project for thinkful. It sets up routes and API calls to access and update dishes and orders in additon to creating and deleting orders for a fictional food delievery app. 
                         The app uses middleware to validate the requests made have sufficient data properties for the request to be successful. The app uses express and node.js.</p>
                         <a href="https://github.com/kieran-calavan/grubdash-project" class="btn btn-primary">Grubdash Repository</a>
-                        <a href="https://grub-dash-front-end-ten.vercel.app/" class="btn btn-primary">Grubdash Front End</a>
+                        <a href="https://grub-dash-front-end-ten.vercel.app/" class="btn btn-primary">Grubdash Project</a>
                       <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                   </div>
               </div>
