--- a/index.html
+++ b/index.html
@@ -1167,6 +1167,7 @@
                       <p class="card-text">Flashcard-o-matic is an application for creating, editing, and deleting digital flashcards and decks of flashcards. Each flashcard has a front and back; the front shows the question, the back shows the answer, and there is a button to flip the card. 
                         You can save a series of cards as a deck. This is useful to keep the cards organized by relevance. Cards and decks can be added, modified, and/or deleted.</p>
                         <a href="https://github.com/kieran-calavan/flashcard-project" class="btn btn-primary">Flashcard Repository</a>
+                        <a href="https://flashcard-project-nine.vercel.app/" class="btn btn-primary">Flashcard Project</a>
                       <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                     </div>
                   </div>
