--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
                       <p class="card-text">This is the backend for the Grubdash project for thinkful. It sets up routes and API calls to access and update dishes and orders in additon to creating and deleting orders for a fictional food delievery app. 
                         The app uses middleware to validate the requests made have sufficient data properties for the request to be successful. The app uses express and node.js.</p>
                         <a href="https://github.com/kieran-calavan/grubdash-project" class="btn btn-primary">Grubdash Repository</a>
-                        <a href="https://grub-dash-front-end-ten.vercel.app/" class="btn btn-primary">Grubdash Project</a>
+                        <!-- <a href="https://grub-dash-front-end-ten.vercel.app/" class="btn btn-primary">Grubdash Project</a> -->
                       <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                   </div>
               </div>
@@ -1167,7 +1167,7 @@
                       <p class="card-text">Flashcard-o-matic is an application for creating, editing, and deleting digital flashcards and decks of flashcards. Each flashcard has a front and back; the front shows the question, the back shows the answer, and there is a button to flip the card. 
                         You can save a series of cards as a deck. This is useful to keep the cards organized by relevance. Cards and decks can be added, modified, and/or deleted.</p>
                         <a href="https://github.com/kieran-calavan/flashcard-project" class="btn btn-primary">Flashcard Repository</a>
-                        <a href="https://flashcard-project-nine.vercel.app/" class="btn btn-primary">Flashcard Project</a>
+                        <!-- <a href="https://flashcard-project-nine.vercel.app/" class="btn btn-primary">Flashcard Project</a> -->
                       <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
                     </div>
                   </div>
