--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       rel="stylesheet"
       type="text/css"
     />
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-JCNNGNPCS4"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-JCNNGNPCS4');
+      </script>
     <style>
       html,
       body,
