--- a/index.html
+++ b/index.html
@@ -1100,10 +1100,7 @@
                     Kieran Calavan
                   </h1>
                   <p id="text10" style="opacity: 1; transform: none">
-                    <strong
-                      >I am a software engineering program student based in
-                      Saint Paul, MN.</strong
-                    >
+                    <strong> I am a web developer based in Saint Paul, MN. </strong>
                   </p>
                   <ul id="icons01" class="icons">
                     <li style="opacity: 1; transform: none">
