--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@
                     <li style="opacity: 1; transform: none">
                       <a
                         class="n04"
-                        href="https://drive.google.com/file/d/1VqrlvzEch7RhlXPTou_0Vm7C0tXOVBuu/view"
+                        href="#"
                         ><svg><use xlink:href="#icon-a4d"></use></svg>
                         <span class="label">CV</span>
                       </a>
@@ -1154,7 +1154,7 @@
                   <img class="card-img-top" src="images/grubdash-project.png" alt="screenshot of the grubdash project dashboard">
                   <div class="card-body">
                       <h5 class="card-title">Grubdash Project</h5>
-                      <p class="card-text">This is the backend for the Grubdash project for thinkful. It sets up routes and API calls to access and update dishes and orders in additon to creating and deleting orders for a fictional food delievery app. 
+                      <p class="card-text">This is the backend for the Grubdash project for thinkful. It sets up routes and API calls to access and update dishes and orders in additon to creating and deleting orders for a fictional food delievery app.
                         The app uses middleware to validate the requests made have sufficient data properties for the request to be successful. The app uses express and node.js.</p>
                         <a href="https://github.com/kieran-calavan/grubdash-project" class="btn btn-primary">Grubdash Repository</a>
                         <a href="https://grub-dash-front-end-ten.vercel.app/" class="btn btn-primary">Grubdash Project</a>
@@ -1170,7 +1170,7 @@
                   <img class="card-img-top" src="images/flashcard-project.png" alt="screenshot of the flashcard project dashboard">
                   <div class="card-body">
                       <h5 class="card-title">Flashcard Project</h5>
-                      <p class="card-text">Flashcard-o-matic is an application for creating, editing, and deleting digital flashcards and decks of flashcards. Each flashcard has a front and back; the front shows the question, the back shows the answer, and there is a button to flip the card. 
+                      <p class="card-text">Flashcard-o-matic is an application for creating, editing, and deleting digital flashcards and decks of flashcards. Each flashcard has a front and back; the front shows the question, the back shows the answer, and there is a button to flip the card.
                         You can save a series of cards as a deck. This is useful to keep the cards organized by relevance. Cards and decks can be added, modified, and/or deleted.</p>
                         <a href="https://github.com/kieran-calavan/flashcard-project" class="btn btn-primary">Flashcard Repository</a>
                         <a href="https://flashcard-project-nine.vercel.app/" class="btn btn-primary">Flashcard Project</a>
@@ -1178,7 +1178,7 @@
                     </div>
                   </div>
                 </div>
-              </div>          
+              </div>
             </div>
           </div>
         </div>
