tailwind and github contributions

--- a/index.html
+++ b/index.html
@@ -171,9 +171,11 @@
                 </div>
               </div>
             </div>
+          </div>
         </div>
-      </div>
+        <div id="github">
+          <img src="https://ghchart.rshah.org/kieran-calavan" alt="Kieran 2023 Github Contributions chart" />
+        </div>
     </div>
-  </div>
 </body>
 </html>
