--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
                       <span class="label">LinkedIn</span>
                     </a>
                   </li>
-                  <!-- <li style="opacity: 1; transform: none">
+                  <li style="opacity: 1; transform: none">
                     <a
                       class="n04"
-                      href="#"
+                      href="https://drive.google.com/file/d/1iAq8eCaclmcESvuO1csFSSxeAYme56Xa/view?usp=drive_link"
                       ><svg><use xlink:href="#icon-a4d"></use></svg>
                       <span class="label">CV</span>
                     </a>
-                  </li> -->
+                  </li>
                   <li style="opacity: 1; transform: none">
                     <a class="n05" href="https://github.com/kieran-calavan?tab=repositories"
                       ><svg><use xlink:href="#icon-b47"></use></svg>
