--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                   <li style="opacity: 1; transform: none">
                     <a
                       class="n04"
-                      href="https://drive.google.com/file/d/1iAq8eCaclmcESvuO1csFSSxeAYme56Xa/view?usp=drive_link"
+                      href="https://drive.google.com/file/d/1vXTZx5gtsVtfXIBVp58isUwQg64L_IJn/view"
                       ><svg><use xlink:href="#icon-a4d"></use></svg>
                       <span class="label">CV</span>
                     </a>
